--- a/project/css/app-login.css
+++ b/project/css/app-login.css
@@ -51,3 +51,13 @@ img.logo {
 span.psw {
     float: auto;
 }
+
+.footer {
+    position: relative;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color: white;
+    text-align: center;
+}
