--- a/project/css/app-home.css
+++ b/project/css/app-home.css
@@ -28,9 +28,29 @@ a {
     height: 100%;
     width: 0;
     position: fixed ;
+    overflow-x: hidden;
+    top: 0;
+    left: 0;
     background-color: darkgray;
     z-index: 1;
     transition: 0.5s;
+}
+
+#side-bar a {
+    padding: 8px, 8px, 8px, 32px;
+    text-decoration: none;
+}
+
+#side-bar a:hover {
+    color: #f1f1f1;
+}
+
+.clsbtn {
+    cursor: pointer;
+    font-size: 36px;
+    padding-right: 10px;
+    float: right;
+    color: lightgray;
 }
 
 #top-bar {
@@ -47,20 +67,24 @@ a {
     height: 100%;
     width: 5%;
     max-width: 5%;
-    cursor: pointer;
     text-align: center;
     display: block;
     vertical-align: middle;
+    background-color: darkgray;
+    border: none;
+}
+
+#menu-button:focus {
+    outline: 0;
 }
 
 #menu {
     z-index: 1;
     display: relative;
-    margin-top: 17%;
     margin-right: auto;
     margin-left: auto;
     height: 60%;
-    
+    cursor: pointer;
 }
 
 #logo {
