--- a/project/css/app-signup.css
+++ b/project/css/app-signup.css
@@ -2,6 +2,13 @@ body {
 background:  #b3b3b3;
  }
 
+/* Center the image */
+.imgcontainer {
+    text-align: center;
+}
+img.logo {
+    width: 35%;
+}
 button {
     background-color:  #0066cc;
     color: white;
@@ -9,17 +16,35 @@ button {
     margin: 8px 0;
     border: none;
     cursor: pointer;
-    width: 20%;
+    width: 10%;
     text-align: center;
     border-radius: 4px;
-    
+}
     /* inputs */
-input[type=text], input[type=password] {
-    width: 100%;
-    padding: 12px 20px;
+input[type=first],input[type=last],input[type=email],input[type=email2],input[type=password],input[type=password2] {
+    width: 35%;
+    padding: 4px 4px;
     margin: 2px 0;
     display: inline-block;
     border: 1px solid #ccc;
     box-sizing: border-box;
-    border-radius: 8px;
+    border-radius: 8px;  
 }
+
+    /* button */
+h1{
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 50;
+    margin-top: auto;
+}
+.container {
+    text-align: center;
+    font-family: sans-serif;
+
+}
+
+.container2 {
+  text-align: center;
+}
+
