--- a/project/css/app-home.css
+++ b/project/css/app-home.css
@@ -43,6 +43,7 @@ a {
     display: block;
     color: #f1f1f1;
     font-family: 'Acme', sans-serif;
+    transition: 0.3s;
 }
 
 #side-bar a:hover {
