Added bootstrap css for modals

--- a/project/css/app-home.css
+++ b/project/css/app-home.css
@@ -3,6 +3,9 @@
     background: transparent;
 }
 
+* {
+    font-family: 'Acme', sans-serif;
+}
 html, body { 
     height: 100%;
     margin: 0;
@@ -80,6 +83,24 @@ a {
     display: block;
     vertical-align: middle;
     background-color: darkgray;
+    border: none;
+}
+
+#pinButton {
+    height: 100%;
+    width: 5%;
+    max-width: 5%;
+    text-align: center;
+    display: block;
+    vertical-align: middle;
+    background-color: darkgray;
+    border: none;
+    
+}
+
+#yesButton {
+    background-color: aqua;
+    color: black;
     border: none;
 }
 
