--- a/project/css/app-home.css
+++ b/project/css/app-home.css
@@ -41,8 +41,8 @@ a {
 
 #side-bar a {
     padding: 8px, 8px, 8px, 32px;
+    top: 50%;
     text-decoration: none;
-    font-size: 40px;
     display: block;
     color: #f1f1f1;
     font-family: 'Acme', sans-serif;
@@ -53,9 +53,15 @@ a {
     color: black;
 }
 
+#sideList {
+    padding-top: 40%;
+}
+
 #side-bar .list {
-    margin-top: 30%;
+    margin-top: 25%;
     text-align: center;
+    font-size: 25px;
+
 }
 
 .clsbtn {
@@ -63,6 +69,7 @@ a {
     padding-right: 10px;
     top: 0;
     float: right;
+    font-size: 40px;
 }
 
 #top-bar {
