--- a/project/css/app-home.css
+++ b/project/css/app-home.css
@@ -36,7 +36,7 @@ a {
     left: 0;
     background-color: darkgray;
     z-index: 1;
-    transition: 0.5s;
+    transition: 0.2s;
 }
 
 #side-bar a {
@@ -46,8 +46,9 @@ a {
     display: block;
     color: #f1f1f1;
     font-family: 'Acme', sans-serif;
-    transition: 0.3s;
 }
+
+
 
 #side-bar a:hover {
     color: black;
@@ -61,7 +62,7 @@ a {
     margin-top: 25%;
     text-align: center;
     font-size: 25px;
-
+    visibility: hidden;
 }
 
 .clsbtn {
@@ -120,7 +121,7 @@ a {
     display: relative;
     margin-right: auto;
     margin-left: auto;
-    height: 60%;
+    height: 45%;
     cursor: pointer;
 }
 
