--- a/project/css/app-profile.css
+++ b/project/css/app-profile.css
@@ -1,30 +1,84 @@
 * {
-    font-family: 'Acme', sans-serif;    
+    font-family: 'Acme', sans-serif;
 }
 
 body {
-    background:  #b3b3b3;
+background:  #b3b3b3;
  }
 
-button {
-    background-color:  #0066cc;
-    color: white;
-    padding: 8px 8px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 10%;
-    text-align: center;
-    border-radius: 4px;
-}
-  
+#ProfilePage
+{
+    /* Move it off the top of the page, then centre it horizontally */
+    margin: 50px auto;
+    width: 625;
 
-.footer {
-    position: relative;
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    color: white;
+    border: 1px solid black;
+}
+
+#LeftCol
+{
+    /* Move it to the left */
+    float: left;
+
+    width: 200px;
     text-align: center;
+
+    /* Move it away from the content */
+    margin-right: 20px;
+}
+
+#Photo
+{
+    /* Width and height of photo container */
+    width: 200px;
+    height: 200px;
+
+/* For visibility. Delete me */
+border: 1px solid green;
+}
+
+#PhotoOptions
+{
+    text-align: center;
+    width: 200px;
+
+/* For visibility. Delete me */
+border: 1px solid brown;
+}
+
+#Info
+{
+    width: 400px;
+    text-align: center;
+
+    /* Move it to the right */
+    float: right;
+
+/* For visibility. Delete me */
+border: 1px solid blue;
+}
+
+#Info strong
+{
+    /* Give it a width */
+    display: inline-block;
+    width: 100px;
+
+/* For visibility. Delete me */
+border: 1px solid orange;
+}
+
+#Info span
+{
+    /* Give it a width */
+    display: inline-block;
+    width: 250px;
+
+/* For visibility. Delete me */
+border: 1px solid purple;
+}
+
+img.profilepic {
+   width: inherit;
+    height: inherit;
 }
