--- a/project/css/app-parks.css
+++ b/project/css/app-parks.css
@@ -12,6 +12,7 @@ html, body {
     padding: 0;
     overflow-y: hidden;
     font-family: Georgia, sans-serif;
+    
 }
 
 a {
@@ -30,7 +31,7 @@ a {
 #side-bar {
     height: 100%;
     width: 0;
-    position: fixed ;
+    position: fixed;
     overflow-x: hidden;
     top: 0;
     left: 0;
@@ -122,4 +123,25 @@ a {
 #logo img {
     height: 100%;
     cursor: pointer;
+}
+
+#mainContent {
+    height: 90%;
+    width: 40%;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    align-content: center;
+    background-color: darkgray;
+    position: absolute;
+}
+
+#map {
+    height: 90%;
+    width: 60%;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    float: right;
+    position: relative;
 }
