--- a/skateable/client/css/app-home.css
+++ b/skateable/client/css/app-home.css
@@ -127,12 +127,14 @@ a {
 
 #logo {
     width: 90%;
-    height: 100%;
+    max-height: 100%;
     text-align: center;
 }
 
 #logo img {
     height: inherit;
+    height: 100%;
+    max-height: 100%
 }
 
 #map { 
