--- a/skateable/client/css/app-home.css
+++ b/skateable/client/css/app-home.css
@@ -65,6 +65,13 @@ a {
     visibility: hidden;
 }
 
+#side-bar .login {
+    margin-top: 80%;
+    text-align: center;
+    font-size: 25px;
+    visibility: hidden;
+}
+
 .clsbtn {
     cursor: pointer;
     padding-right: 10px;
