Added marker drop with infowindow

--- a/skateable/client/css/app-home.css
+++ b/skateable/client/css/app-home.css
@@ -140,7 +140,12 @@ a {
     z-index: 10;
 }
 
-.modal-body form {
+.modal-header {
+    text-align: center;
+    align-content: center;
+}
+
+.modal-body {
     text-align: center;
     align-content: center;
 }
