forgot to save a few changes. Re-adding to master profile page

--- a/skateable/client/css/app-profile.css
+++ b/skateable/client/css/app-profile.css
@@ -133,9 +133,11 @@ a {
 
 #Photo
 {
-    width: 150px;
-    height: 150px;
+    width: 125px;
+    height: 125px;
     margin-right: auto;
+    margin-left: auto;
+
 
 }
 img.profilepic {
