Changed SignUp page details

--- a/skateable/client/css/app-signup.css
+++ b/skateable/client/css/app-signup.css
@@ -35,6 +35,10 @@ input[type=text] {
     border-radius: 8px;  
 }
 
+.error {
+    color: #FF0000;
+    font-size: 14px;
+}
 
     /* button */
 h1 {
