--- a/skateable/client/css/app-home.css
+++ b/skateable/client/css/app-home.css
@@ -87,7 +87,6 @@ a {
     border-color: black;
     display: flex;
     flex-wrap: wrap;
-    
 }
 
 #menu-button {
@@ -169,7 +168,8 @@ a {
 
 #logo {
     width: 90%;
-    max-height: 100%;
+    max-height: 90%;
+    margin: 0 auto;
     text-align: center;
 }
 
@@ -183,7 +183,7 @@ a {
     bottom: 0px;
     height: 90%;
     left: 0px;
-    position: absolute;
+    position: fixed;    
     right: 0px;
 }
 
