--- a/skateable/client/css/app-profile.css
+++ b/skateable/client/css/app-profile.css
@@ -180,6 +180,20 @@ textarea {
     resize: none;
 }
 
+.settingsButton {
+padding-left: 6%;
+}
+button {
+    background-color:  #0066cc;
+    color: white;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 20%;
+    text-align: center;
+    border-radius: 4px;
+
+}
 #map {
     height: 90%;
     width: 65%;
