--- a/skateable/client/css/app-profile.css
+++ b/skateable/client/css/app-profile.css
@@ -155,6 +155,7 @@ img.profilepic {
     border-style: solid;
     border-bottom-color: black;
     border-width: 1px;
+    overflow:scroll;
 }
 
 ul {
@@ -180,6 +181,12 @@ textarea {
     resize: none;
 }
 
+.panel{
+width: 395px;
+display: none;
+background-color: white;
+overflow: hidden;
+}
 .settingsButton {
 padding-left: 6%;
 }
@@ -189,7 +196,7 @@ button {
     margin: 8px 0;
     border: none;
     cursor: pointer;
-    width: 20%;
+    width: 120;
     text-align: center;
     border-radius: 4px;
 
