--- a/skateable/client/css/app-profile.css
+++ b/skateable/client/css/app-profile.css
@@ -53,6 +53,13 @@ a {
     color: black;
 }
 
+#side-bar .login {
+    margin-top: 80%;
+    text-align: center;
+    font-size: 25px;
+    visibility: hidden;
+}
+
 #sideList {
     padding-top: 40%;
 }
