--- a/skateable/client/css/app-profile.css
+++ b/skateable/client/css/app-profile.css
@@ -169,15 +169,17 @@ ul {
   list-style: none;
     padding-left: 0;
 }
-.entry 
-{
+.entry {
 	width:auto;
     height: auto;
 	display: block;
 	clear: both;
 	margin-left:2px;
+    font-size: 14px;
 }
-
+.self{
+        font-size: 18px;
+}
 textarea {
     width: 100%;
     height: 20%;
