--- a/skateable/client/css/app-home.css
+++ b/skateable/client/css/app-home.css
@@ -30,7 +30,7 @@ a {
 #side-bar {
     height: 100%;
     width: 0;
-    position: fixed ;
+    position: fixed;
     overflow-x: hidden;
     top: 0;
     left: 0;
@@ -194,6 +194,36 @@ a {
     width: 20%;
 }
 
-.infoWindow {
+#content-info-window {
     text-align: center;
+}
+
+#comment-box {
+    margin: 0 auto;
+    width: 100%;
+    max-height: 50%;
+    height: 150px;
+    border: 2px black solid;
+}
+
+#yayBtn {
+    width: 50px;
+    height: 30px;
+    color: white;
+    background-color: green;
+    float: left;
+    border: none;
+    text-decoration: none;
+    margin-top: 15px;
+}
+
+#nayBtn {
+    width: 50px;
+    height: 30px;
+    color: white;
+    background-color: red;
+    float: right;
+    border: none;
+    text-decoration: none;
+    margin-top: 15px;
 }
