Change Profile Page Password changer to be a Modal

--- a/skateable/client/css/app-profile.css
+++ b/skateable/client/css/app-profile.css
@@ -216,6 +216,25 @@ button {
     border-radius: 4px;
 
 }
+.modal {
+    width: 100%;
+    z-index: 20;
+    position: absolut
+}
+
+.modal-backdrop {
+    z-index: 10;
+}
+
+.modal-header {
+    text-align: center;
+    align-content: center;
+}
+
+.modal-body {
+    text-align: center;
+    align-content: center;
+}
 
 #map {
     height: 90%;
