--- a/skateable/client/css/app-profile.css
+++ b/skateable/client/css/app-profile.css
@@ -205,7 +205,7 @@ overflow: hidden;
 .settingsButton {
 padding-left: 6%;
 }
-button {
+#profBttn {
     background-color:  #0066cc;
     color: white;
     margin: 8px 0;
@@ -219,7 +219,10 @@ button {
 .modal {
     width: 100%;
     z-index: 20;
-    position: absolut
+    padding-left: 30%;
+    padding-right: 30%;
+    padding-top: 2%;
+
 }
 
 .modal-backdrop {
