--- a/skateable/client/css/app-home.css
+++ b/skateable/client/css/app-home.css
@@ -37,6 +37,7 @@ a {
     background-color: darkgray;
     z-index: 1;
     transition: 0.2s;
+	
 }
 
 #side-bar a {
@@ -66,7 +67,7 @@ a {
 }
 
 #side-bar .login {
-    margin-top: 80%;
+    margin-top: 40%;
     text-align: center;
     font-size: 25px;
     visibility: hidden;
@@ -87,6 +88,7 @@ a {
     border-color: black;
     display: flex;
     flex-wrap: wrap;
+	border-bottom: 2px solid black;
 }
 
 #menu-button {
@@ -168,16 +170,14 @@ a {
 }
 
 #logo {
-    width: 90%;
-    max-height: 90%;
-    margin: 0 auto;
+ 	width: 90%;
+    height: 100%;
     text-align: center;
 }
 
 #logo img {
-    height: inherit;
-    height: 100%;
-    max-height: 100%
+	height: 100%;
+    cursor: pointer;
 }
 
 #map { 
