--- a/skateable/client/css/app-parks.css
+++ b/skateable/client/css/app-parks.css
@@ -38,6 +38,7 @@ a {
     background-color: darkgray;
     z-index: 1;
     transition: 0.2s;
+	
 }
 
 #side-bar a {
@@ -50,7 +51,7 @@ a {
 }
 
 #side-bar .login {
-    margin-top: 80%;
+    margin-top: 40%;
     text-align: center;
     font-size: 25px;
     visibility: hidden;
@@ -86,7 +87,8 @@ a {
     border-color: black;
     display: flex;
     flex-wrap: wrap;
-    
+    border-bottom: 2px solid black;
+
 }
 
 #menu-button {
@@ -138,6 +140,7 @@ a {
     right: 0;
     background-color: darkgray;
     position: absolute;
+	border-right: 2px solid black;
 }
 
 #parksTitle {
