Meetup UI added to info Window. Not yet connected to beckend

--- a/skateable/client/css/app-home.css
+++ b/skateable/client/css/app-home.css
@@ -156,7 +156,15 @@ a {
     margin: 0 auto;
     width: 70%;
 }
-
+.modal-body2 {
+	text-align: left;
+    align-content: center;
+    justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    width: 90%;
+}
 #pinName {
     margin-left: 10px;
     height: auto;
@@ -176,7 +184,33 @@ a {
 #ratingButtons {
     width: 60%;
 }
+.modal-title{
+	font-size: 25px;
+}
+h7, h8, h9{
+width: 100%;
+	text-align: center;
+}
+#meetupDay{
+	margin-left: 10px;
+	margin-bottom: 10px;
+    height: auto;
+}
 
+#description{
+	width: 100%;
+    min-height: 50px;
+    height: 10%;
+    overflow: hidden;
+	margin-bottom: 10px;
+}
+#yesbttn{
+	margin-left: 5px;
+}
+#nobttn{
+	margin-left: 5px;
+
+}
 #menu-button:focus {
     outline: 0;
 }
