--- a/skateable/client/css/app-parks.css
+++ b/skateable/client/css/app-parks.css
@@ -187,6 +187,9 @@ a {
 
 #content-info-window {
     text-align: center;
+    width: 300px;
+	border-radius: 4px;
+	
 }
 
 #comment-box {
@@ -198,14 +201,15 @@ a {
 }
 
 #yayBtn {
-    width: 50px;
+  	width: 50px;
     height: 30px;
     color: white;
     background-color: green;
     float: left;
     border: none;
     text-decoration: none;
-    margin-top: 15px;
+	border-radius: 4px;
+	
 }
 
 #nayBtn {
@@ -216,11 +220,21 @@ a {
     float: right;
     border: none;
     text-decoration: none;
-    margin-top: 15px;
+	border-radius: 4px;
+	
 }
 
 #favBtn {
     margin-bottom: 10px;
-    border: 1px darkgrey solid;
-    background-color: white;
+    background-color: yellow;
+    color: black;
+    margin: 4px 0;
+    border: none;
+    cursor: pointer;
+    width: 25%;
+    text-align: center;
+    border-radius: 4px;
+}
+#rating{
+    width: 100%;
 }
