--- a/skateable/client/css/app-home.css
+++ b/skateable/client/css/app-home.css
@@ -196,7 +196,11 @@ width: 100%;
 	margin-bottom: 10px;
     height: auto;
 }
-
+#meetuptime{
+	margin-left: 10px;
+	margin-bottom: 10px;
+    height: auto;
+}
 #description{
 	width: 100%;
     min-height: 50px;
