--- a/skateable/client/css/app-home.css
+++ b/skateable/client/css/app-home.css
@@ -165,6 +165,15 @@ a {
     margin: 0 auto;
     width: 90%;
 }
+.modal-body3 {
+	text-align: center;
+    align-content: center;
+    justify-content: center;
+    width: 90%;
+}
+ul {
+  list-style-type: none;
+}
 #pinName {
     margin-left: 10px;
     height: auto;
