--- a/skateable/client/css/app-groups.css
+++ b/skateable/client/css/app-groups.css
@@ -197,6 +197,7 @@ h4, h5, h6{
 }
 
 #chatBox {
+	 overflow-y: auto;
     background-color: white;
     height: 70%;
     max-width: 500px;
@@ -206,6 +207,9 @@ h4, h5, h6{
     border-top-right-radius: 15px;
     border: 2px solid black;
     opacity: 0.7;
+	text-align: left;
+	font-size: large;
+	padding-left: 5px;
 }
 
 #message {
