--- a/skateable/client/css/app-groups.css
+++ b/skateable/client/css/app-groups.css
@@ -316,3 +316,15 @@ h4, h5, h6{
 #places-search {
     width: 60%;
 }
+
+@media only screen and (max-width: 1000px) {
+    /* For mobile phones: */
+    #side-bar .list {
+        margin-top: 15%;
+        font-size: 40px;
+    }
+    #side-bar .login {
+        margin-top: 25%;
+        font-size: 40px;
+    }
+}
