--- a/skateable/client/css/app-home.css
+++ b/skateable/client/css/app-home.css
@@ -425,3 +425,15 @@ width: 100%;
     text-align: center;
     border-radius: 4px;
 }
+
+@media only screen and (max-width: 1000px) {
+    /* For mobile phones: */
+    #side-bar .list {
+        margin-top: 15%;
+        font-size: 40px;
+    }
+    #side-bar .login {
+        margin-top: 25%;
+        font-size: 40px;
+    }
+}
