--- a/skateable/client/css/app-login.css
+++ b/skateable/client/css/app-login.css
@@ -26,6 +26,7 @@ button {
     border: none;
     cursor: pointer;
     width: 20%;
+    min-width: 80px;
     text-align: center;
     border-radius: 4px;
 
@@ -37,8 +38,9 @@ button {
 }
 
 /* logo image */
-img.logo {
+.logo {
     width: 40%;
+    min-width: 250px;
 }
 /* containers */
 .container {
@@ -59,4 +61,10 @@ img.logo {
     width: 100%;
     color: white;
     text-align: center;
+}
+
+@media only screen and (max-width: 1000px) {
+    button {
+        font-size: 16px;
+    }
 }
