--- a/skateable/client/css/app-signup.css
+++ b/skateable/client/css/app-signup.css
@@ -11,7 +11,9 @@ body {
     text-align: center;
 }
 img.logo {
+    margin-top: 100px;
     width: 35%;
+    min-width: 200px;
 }
 button {
     background-color:  #0066cc;
@@ -21,6 +23,7 @@ button {
     border: none;
     cursor: pointer;
     width: 10%;
+    min-width: 65px;
     text-align: center;
     border-radius: 4px;
 }
@@ -74,4 +77,10 @@ h1 {
     width: 100%;
     color: white;
     text-align: center;
+}
+
+@media only screen and (max-width: 1000px) {
+    h1 {
+        font-size: 26px;
+    }
 }
