--- a/skateable/client/css/app-home.css
+++ b/skateable/client/css/app-home.css
@@ -394,10 +394,10 @@ width: 100%;
 }
 #favBtn {
     margin-bottom: 10px;
-    background-color: yellow;
+    background-color: white;
     color: black;
     margin: 4px 0;
-    border: none;
+    border: 1px black solid;
     cursor: pointer;
     width: 28%;
     text-align: center;
