added browser req description to the home page

--- a/skateable/client/css/app-login.css
+++ b/skateable/client/css/app-login.css
@@ -53,8 +53,8 @@ button {
     text-align: center;
 }
 
-.footer {
-    position: relative;
+footer {
+    position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
