--- a/skateable/client/css/app-login.css
+++ b/skateable/client/css/app-login.css
@@ -60,6 +60,7 @@ footer {
     width: 100%;
     color: white;
     text-align: center;
+	padding-bottom: 5px;
 }
 
 @media only screen and (max-width: 1000px) {
