--- a/skateable/client/css/app-login.css
+++ b/skateable/client/css/app-login.css
@@ -58,7 +58,9 @@ footer {
     left: 0;
     bottom: 0;
     width: 100%;
-    color: white;
+    color: black;
+	font-size: 150%;
+	font-weight: bold;
     text-align: center;
 }
 
