--- a/skateable/client/css/app-login.css
+++ b/skateable/client/css/app-login.css
@@ -62,6 +62,12 @@ footer {
 	font-size: 150%;
 	font-weight: bold;
     text-align: center;
+	
+}
+.requirements {
+	    width: 50%;
+    min-width: 250px;
+	height: auto;
 }
 
 @media only screen and (max-width: 1000px) {
